--- a/languages/erlang.org
+++ b/languages/erlang.org
@@ -1,3 +1,6 @@
+- Calling Elixir from erlang
+  https://joearms.github.io/published/2017-12-18-Calling-Elixir-From-Erlang.html
+- https://erlang.org/mailman/listinfo
 - https://abstractmachines.dev/posts/am012-why-typing-erlang-is-hard.html
 - https://www.erlang-solutions.com/blog/the-sound-of-erlang-how-to-use-erlang-as-an-instrument.html?utm_source=twitter&utm_medium=social+
 - examples https://rosettacode.org/wiki/Category:Erlang
